# quark

./: .gitignore  .prettierignore  LICENSE  PLAN.md  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/actions/: setup.yml
.github/actions/check-version/: action.yaml
.github/actions/detect-changes/: action.yaml
.github/actions/macos-sign/: action.yaml
.github/actions/patch-version/: action.yaml
.github/actions/setup/: action.yaml
.github/actions/version/: action.yaml
.github/workflows/: build.yaml  build.yml  nightly-linux.yaml  nightly-macos-aarch64.yaml  nightly-windows.yaml  nightly.yaml  publish-linux.yaml  publish-macos-aarch64.yaml  publish-windows.yaml  publish.yaml  publish.yml  release.yaml  tauri-build.yaml  update-badges.yaml
src/: App.tsx  LockScreen.tsx  QuickAccess.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: base64_serde.rs  config.rs  crypto.rs  date.rs  error.rs  handlers.rs  item.rs  lib.rs  main.rs  shell.rs  state.rs  store.rs  tray.rs  vault.rs
src-tauri/src/app/: cli.rs  config.rs  crypto.rs  mod.rs  shell.rs  shortcut.rs  tray.rs
src-tauri/src/app/config/: global_shortcut.rs  mod.rs  shortcut.rs
src-tauri/src/app/state/: crypto.rs  item.rs  mod.rs  runtime.rs
src-tauri/src/commands/: copy_alt.rs  copy_primary.rs  copy_secondary.rs  get_items.rs  get_shortcut_action.rs  get_shortcuts.rs  init_crypto.rs  is_first_launch.rs  is_locked.rs  lock.rs  mod.rs  refresh_items.rs  unlock.rs
src-tauri/src/item/: content.rs  item.rs  item_ref.rs  mod.rs
src-tauri/src/item/data/: credit_card.rs  login.rs  mod.rs
src-tauri/src/serde/: log_level.rs  mod.rs
src/components/: Alert.tsx  ArrowForward.tsx  Icon.tsx  Lock.tsx  Refresh.tsx  index.ts
src/hooks/: useShortcuts.ts  useWindowFocus.ts
src/pages/: LockScreen.tsx  QuickAccess.tsx  Setup.tsx  index.ts
