[package]
name = "proton-pass-quick-access"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proton_pass_quick_access_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-log = "2"
anyhow = "1.0.102"
anyhow-tauri = "1.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
dirs = "6.0.0"
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
zeroize = { version = "1.8.2", features = ["derive", "alloc"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.10.0"

[dev-dependencies]
clippy = "0.0.302"

