[package]
name = "quark"
description = "Quick access for Proton Pass using pass-cli"
authors = ["me@umtdg.com <Umut Dag>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = { git = "https://github.com/umtdg/plugins-workspace", branch = "feat-clipboard-exclude" }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2.3.5"
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.22"
dirs = "6.0.0"
log = "0.4.29"
nucleo-matcher = "0.3.1"
rand = "0.10.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1.51.1", default-features = false }
totp-rs = { version = "5.7.1", features = ["otpauth", "zeroize"] }
zeroize = { version = "1.8.2", features = ["derive", "alloc"] }
global-hotkey = { version = "0.7.0", default-features = false, features = ["serde"] }

[dev-dependencies]
clippy = "0.0.302"

